paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/array_decl_1/sample_004/target.compile.log
warning: unnecessary parentheses around assigned value
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/array_decl_1/sample_004/target.rs:14:26
   |
14 |             backing[i] = (100.0 + i as f32);
   |                          ^                ^
   |
   = note: `#[warn(unused_parens)]` (part of `#[warn(unused)]`) on by default
help: remove these parentheses
   |
14 -             backing[i] = (100.0 + i as f32);
14 +             backing[i] = 100.0 + i as f32;
   |

error[E0506]: cannot assign to `backing[_]` because it is borrowed
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/array_decl_1/sample_004/target.rs:14:13
   |
 9 |     fn init_globals(fa: &mut [f32; 11], backing: &mut [f32; 17], afp: &mut Vec<&f32>) {
   |                                                                                - let's call the lifetime of this reference `'2`
...
14 |             backing[i] = (100.0 + i as f32);
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `backing[_]` is assigned to here but it was already borrowed
15 |             afp.push(&backing[i]);
   |             ---------------------
   |             |        |
   |             |        `backing[_]` is borrowed here
   |             argument requires that `backing[_]` is borrowed for `'2`

error: lifetime may not live long enough
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/array_decl_1/sample_004/target.rs:15:13
   |
 9 |     fn init_globals(fa: &mut [f32; 11], backing: &mut [f32; 17], afp: &mut Vec<&f32>) {
   |                                                  -                             - let's call the lifetime of this reference `'2`
   |                                                  |
   |                                                  let's call the lifetime of this reference `'1`
...
15 |             afp.push(&backing[i]);
   |             ^^^^^^^^^^^^^^^^^^^^^ argument requires that `'1` must outlive `'2`
   |
   = note: requirement occurs because of a mutable reference to `Vec<&f32>`
   = note: mutable references are invariant over their type parameter
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance
help: consider introducing a named lifetime parameter
   |
 9 |     fn init_globals<'a>(fa: &mut [f32; 11], backing: &'a mut [f32; 17], afp: &mut Vec<&'a f32>) {
   |                    ++++                               ++                               ++

error: aborting due to 2 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0506`.